# diagrama_pantaneiro

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  skills-lock.json  start.bat  stop.bat
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_add_portfolio_tables.py  0003_add_aporte_tables.py  0004_add_target_presets.py  0005_add_portfolios.py  0006_seed_etf_diagram_questions.py  0007_add_position_effective_class.py  0008_add_categories.py  0008_add_ticker_catalog.py  0009_add_position_price_updated_at.py  0010_add_categories.py  0011_expand_imob_etf_questions.py  0012_add_position_tradable.py
backend/app/: main.py  scheduler.py
backend/app/api/: aportes.py  auth.py  catalog.py  categories.py  deps.py  diagram_questions.py  health.py  portfolios.py  positions.py  prices.py  target_presets.py  targets.py
backend/app/core/: config.py  db.py
backend/app/market_data/: base.py  brapi.py  coingecko.py  registry.py  tesouro.py  usd_brl.py  yfinance_adapter.py
backend/app/models/: __init__.py  aporte_allocation.py  aporte_event.py  category.py  diagram_question.py  investment_target.py  portfolio.py  position.py  target_preset.py  ticker_catalog.py  user.py
backend/app/schemas/: aporte.py  catalog.py  category.py  diagram_question.py  portfolio.py  position.py  prices.py  target.py
backend/app/services/: algorithm.py  aporte_service.py  catalog_sync.py  categories.py  import_auvp.py  (+5 more)
backend/tests/: conftest.py  test_config.py  test_db.py  test_user_model.py
(+91 files in other folders)
